# ChessLab-Setup

./: CMakeLists.txt  README.md  package.xml
config/: chesslab_simple_cameras.rviz
launch/: new-dashboard.launch.xml  simulated_scenario.launch  simulated_scenario_no_camera.launch
models/: .directory
models/flat_chessboard/: flat_chessboard.sdf
models/flat_chessboard/meshes/: flat_chessboard.dae
models/pawnB1/: pawnB1.sdf
src/: demo_ik.cpp  follow_traj_client.cpp  follow_traj_wrap_server.cpp  mainNode.cpp  poseOrientGrip.cpp  singlePoseOrient.cpp  ur3_node.cpp  userCommands.cpp
srv/: getpiecepose.srv  movepiece.srv  pickAndPlace.srv  poseOrientGrip.srv  setConf.srv  set_point_to_point_trajectory.srv  userCommands.srv
worlds/: flat_chesslab.world
